--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-<h1>Welcome, {{ current_user['name'] }}</h1>
+<h1>Welcome, <a href="https://twitter.com/{{ current_user['username'] }}">{{ current_user['name'] }}</a></h1>
 
 <form action="/room" method="post">
 New Room Name: <input name="room"> <input type="submit" value="Create Room">
