--- a/templates/room.html
+++ b/templates/room.html
@@ -10,6 +10,8 @@
       <b>@{{ current_user["username"] }}</b> -
       <a href="/auth/logout">{{ _("Sign out") }}</a>
     </div>
+    <a href="/">HallwayChat</a> &rsaquo; <a href="/rooms">Rooms</a> &rsaquo;
+    <h1>{{ room }}</h1>
     <div id="body">
       <div id="inbox">
         {% for message in messages %}
