--- a/static/chat.css
+++ b/static/chat.css
@@ -38,3 +38,22 @@ td {
   float: right;
   z-index: 99;
 }
+
+#roster_container {
+  position: absolute;
+  right: 0px;
+  top: 30px;
+  bottom: 50px;
+  border: 1px solid black;
+  z-index: 99;
+}
+
+#roster_title {
+  font-weight: bold;
+  text-align: center;
+  border-bottom: 1px solid black;
+}
+
+#roster {
+  padding: 5px;
+}
