--- a/templates/room.html
+++ b/templates/room.html
@@ -1,18 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/> 
-    <title>Tornado Chat Demo</title>
-    <link rel="stylesheet" href="{{ static_url("chat.css") }}" type="text/css"/>
-  </head>
-  <body>
-    <div id="nav">
-      <b>@{{ current_user["username"] }}</b> -
-      <a href="/auth/logout">{{ _("Sign out") }}</a>
-    </div>
-    <a href="/">HallwayChat</a> &rsaquo; <a href="/rooms">Rooms</a> &rsaquo;
-    <h1>{{ room }}</h1>
+{% module Template('header.html') %}
+  <ul class="breadcrumb">
+    <li><a href="/">HallwayChat</a> <span class="divider">&rsaquo;</span></li>
+    <li><a href="/rooms">Rooms</a> <span class="divider">&rsaquo;</span></li>
+    <li class="active">{{ room }}</li>
+  </ul>
     <div id="body">
+      <div class="container">
       <div id="inbox">
         {% for message in messages %}
           {% module Template("message.html", message=message) %}
@@ -33,11 +26,9 @@
           </table>
         </form>
       </div>
+      </div>
     </div>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js" type="text/javascript"></script>
-    <script src="{{ static_url("chat.js") }}" type="text/javascript"></script>
     <script type="text/javascript">
     var room = "{{ room }}";
     </script>
-  </body>
-</html>
+{% module Template('footer.html') %}
